vertically align components; fixed navbar to top;

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,14 +6,28 @@
   /* background-color: #444444; */
 }
 
+#navbar-section {
+  width: 100%;
+  top: 0;
+  position: fixed;
+  z-index: 100;
+}
+
 .section {
   height: 100vh;
   width: 100%;
+  text-align: center;
+  justify-content: center;
+  vertical-align: middle;
+  display: flex;
   padding-left: var(--chakra-space-4);
   padding-right: var(--chakra-space-4);
 }
 
-
+.section-div {
+  margin-top: auto;
+  margin-bottom: auto;
+}
 
 
 
